<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_keyboard_control</name>
  <version>0.0.1</version>
  <description>Keyboard control for Franka arm in RViz using MoveIt2</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_servo</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>moveit_resources_panda_moveit_config</depend>
  <depend>moveit_resources_panda_description</depend> -->
  <depend>rm_moveit_config</depend>
  <depend>robot_arm_simulation</depend>
  <depend>serial_driver</depend>
  
  <!-- Runtime dependencies (not used at build time) -->
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
